<resources>
    <!--    Log in and Sign up Screens-->
    <string name="app_name">FoodDelivery</string>
    <string name="Create_account">Create new account</string>
    <string name="Sign_in">Sign in</string>
    <string name="Login_with_google">Continue with Google</string>
    <string name="Reset_new_password">Reset new password</string>
    <string name="Enter_your_number">Enter your number</string>
    <string name="Keep_phone">Keep your phone we will texted you a verification code to your phone number</string>
    <string name="Phone_number">Phone number</string>
    <string name="Enter_your_phone_number">Enter your phone number</string>
    <string name="Continue">Continue</string>
    <string name="Set_new_password">Set a new password</string>
    <string name="Password">Password</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Reset_password">Reset password</string>
    <string name="Reset_your_password">Reset your password</string>
    <string name="Sign_up">Sign up</string>
    <string name="Enter_your_verify_code">Enter your verify code</string>
    <string name="We_texted_verify_code">We texted you a verification code to your phone number</string>
    <string name="Required">Required</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Enter_your_email">Enter your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_dish_name_restaurant">Search dish name, restaurant</string>
    <string name="delivery_to">Delivery to</string>
    <string name="see_more">See more</string>
    <string name="add_dish">Add dish</string>
    <string name="Add_a_note_to_the_restaurant">Add a note to the restaurant</string>
    <string name="popular_in_your_area">Popular in your area</string>

</resources>