<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="51px"
        android:layout_marginTop="60px"
        android:background="@drawable/back_circle_button"
        android:src="@drawable/back_button_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reset_new_password"
        android:textSize="69.12px"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/black"
        android:layout_marginLeft="60px"
        android:layout_marginTop="53.48px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_number"
        android:fontFamily="@font/lato_regular"
        android:textSize="34.56px"
        android:layout_marginLeft="60px"
        android:layout_marginTop="17.28px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="60px"
        android:layout_marginTop="120.56px"
        android:layout_marginRight="60px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Keep_phone"
            android:fontFamily="@font/lato_regular"
            android:textSize="34.56px"
            android:layout_marginTop="17.28px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone_number"
            android:fontFamily="@font/lato_regular"
            android:textSize="40.32px"
            android:layout_marginTop="57.6px"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="28.8px">

            <EditText
                android:id="@+id/editTextEnterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.8px"
                android:hint="@string/Enter_your_phone_number"
                android:textSize="40.32px"
                android:textColor="@color/black"
                android:drawableRight="@drawable/visibility"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:layout_marginTop="103.68px"
            android:background="@drawable/mint_button"
            android:backgroundTint="@color/mint"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="46.08px" />
    </LinearLayout>
</LinearLayout>