<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="51px"
        android:layout_marginTop="60px"
        android:background="@drawable/back_circle_button"
        android:src="@drawable/back_button_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginTop="53.48px"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/Sign_in"
        android:textColor="@color/black"
        android:textSize="69.12px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginTop="17.28px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="New user?"
            android:textSize="34.56px" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:layout_marginLeft="11.52px"
            android:background="#00000000"
            android:fontFamily="@font/lato_regular"
            android:text="Create an account"
            android:textAllCaps="false"
            android:textColor="#0E7DE3"
            android:textSize="40.32px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginTop="111.56px"
        android:layout_marginRight="60px"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Phone_number"
            android:textColor="@color/grey"
            android:textSize="34.56px" />

        <EditText
            android:id="@+id/editTxtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28.8px"
            android:hint="@string/Enter_your_phone_number"
            android:textColor="@color/black"
            android:textSize="40.32px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="121.68px"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Password"
            android:textColor="@color/grey"
            android:textSize="34.56px" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="28.8px">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="40.32px"
                android:hint="@string/Enter_your_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:background="@drawable/mint_button"
            android:backgroundTint="@color/mint"
            android:layout_marginTop="103.68px"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="46.08px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:background="#00000000"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Reset_your_password"
            android:textAllCaps="false"
            android:textColor="#0E7DE3"
            android:textSize="40.32px"
            android:layout_gravity="bottom"
            android:layout_marginBottom="40px"/>
    </LinearLayout>

</LinearLayout>