<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="51px"
        android:layout_marginTop="60px"
        android:background="@drawable/back_circle_button"
        android:src="@drawable/back_button_foreground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reset_new_password"
        android:textSize="69.12px"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/black"
        android:layout_marginLeft="60px"
        android:layout_marginTop="53.48px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_new_password"
        android:fontFamily="@font/lato_regular"
        android:textSize="34.56px"
        android:layout_marginLeft="60px"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginTop="111.56px"
        android:layout_marginRight="60px"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="40.32px" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="28.8px">

            <EditText
                android:id="@+id/editTextEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.8px"
                android:drawableRight="@drawable/visibility"
                android:hint="@string/Enter_your_password"
                android:textColor="@color/black"
                android:textSize="40.32px"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="121.68px"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Confirm_password"
            android:textColor="@color/black"
            android:textSize="40.32px" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="28.8px">

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.8px"
                android:drawableRight="@drawable/visibility"
                android:hint="@string/Confirm_password"
                android:textColor="@color/black"
                android:textSize="40.32px"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:layout_marginTop="103.68px"
            android:background="@drawable/mint_button"
            android:backgroundTint="@color/mint"
            android:text="@string/Reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="46.08px" />
    </LinearLayout>

</LinearLayout>