<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="51px"
        android:layout_marginTop="60px"
        android:background="@drawable/back_circle_button"
        android:src="@drawable/back_button_foreground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textSize="69.12px"
        android:fontFamily="@font/lato_semibold"
        android:textColor="@color/black"
        android:layout_marginLeft="60px"
        android:layout_marginTop="53.48px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_verify_code"
        android:fontFamily="@font/lato_regular"
        android:textSize="34.56px"
        android:layout_marginLeft="60px"
        android:layout_marginTop="17.28px"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/We_texted_verify_code"
        android:fontFamily="@font/lato_regular"
        android:textSize="34.56px"
        android:layout_marginTop="120.56px"
        android:layout_marginHorizontal="60px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="57.6px"
        android:layout_marginHorizontal="60px"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextCodeNumber1"
            android:layout_width="172px"
            android:layout_height="172px"
            android:hint="0"
            android:textSize="69.12px"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editTextCodeNumber2"
            android:layout_width="172px"
            android:layout_height="172px"
            android:hint="0"
            android:textSize="69.12px"
            android:gravity="center"
            android:layout_marginLeft="83.52px"/>
        <EditText
            android:id="@+id/editTextCodeNumber3"
            android:layout_width="172px"
            android:layout_height="172px"
            android:hint="0"
            android:textSize="69.12px"
            android:gravity="center"
            android:layout_marginLeft="83.52px"/>
        <EditText
            android:id="@+id/editTextCodeNumber4"
            android:layout_width="172px"
            android:layout_height="172px"
            android:hint="0"
            android:textSize="69.12px"
            android:gravity="center"
            android:layout_marginLeft="83.52px"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:background="@drawable/mint_button"
        android:backgroundTint="@color/mint"
        android:layout_marginTop="103.68px"
        android:text="@string/Continue"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="46.08px"
        android:layout_marginHorizontal="60px"/>


</LinearLayout>